# megabot_telegram_template

./: .env.example  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  pyproject.toml  start-polling.py  tasks.md
.github/workflows/: linters.yml
locales/en/LC_MESSAGES/: messages.po
scripts/: start-dev.sh
src/: config.py  database.py  main.py  models.py  redis.py
src/routes/: __init__.py
src/routes/telegram/: __init__.py  webhook.py
src/routes/v1/: __init__.py  ping.py  telegram_webhook.py
src/tgbot/: app.py  dependencies.py  exceptions.py  schemas.py
src/tgbot/handlers/: start.py
src/tgbot/middlewares/: i18n.py  logging.py
src/wlui/: l_filter.py
